@@ -61,5 +61,6 @@ setup(name='templer.plone.localcommands',
       browserlayer = templer.plone.localcommands.plone:BrowserLayer
       portlet = templer.plone.localcommands.plone:Portlet
       upgradesteps = templer.plone.localcommands.plone:UpgradeSteps
+      setuphandlers = templer.plone.localcommands.plone:SetupHandlers
       """,
       )
