@@ -29,6 +29,25 @@ class View(PloneSubTemplate):
         vars['view_classname'] = vars['view_name'].replace(' ', '')
 
 
+class SetupHandlers(PloneSubTemplate):
+    """
+    A setup handlers skeleton
+    """
+    _template_dir = 'templates/plone/setuphandlers'
+    summary = "A setuphandlers skeleton"
+
+    vars = [
+      ]
+
+#    def pre(self, command, output_dir, vars):
+#        """
+#        you can use package_namespace, package_namespace2, package
+#        and package_dotted_name of the parent package here. you get them
+#        for free in the vars argument
+#        """
+#        vars['normalized_destination'] = vars['destination'].replace('.', '_')
+
+
 class UpgradeSteps(PloneSubTemplate):
     """
     An upgrade steps skeleton
